[package]
name = "pancakeswap-sdk"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "pancakeswap sdk, Implemented functions related to interaction with pancakeswap."
keywords = ["pancakeswap", "crypto", "defi", "finance", "evm"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/pancakeswap-sdk"

[dependencies]
