[package]
name = "pancakeswap-sdk"
version = "0.6.5"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "pancakeswap sdk, Implemented functions related to interaction with pancakeswap."
keywords = ["pancakeswap", "crypto", "defi", "finance", "evm"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/pancakeswap-sdk"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4.42"
primitive-types = "0.14.0"
ethers = { version = "2.0", features = ["ws", "openssl"] }
csv = "1.4.0"
evm-client = "0.1.5"
evm-sdk = "0.5.0"
